fix: Improve docker

--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 *env-miniocollector
-*collector/data/partners/*
+collector/data/partners/*
